add conection strings

--- a/MyCompany/appsettings.json
+++ b/MyCompany/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+    "ConnectionString": "Data Sourse=(local)\\SQLSERVER; Database=MyCompany; Persist Security Info=false; User ID='sa'; Pasword='sa' MultipleActiveResultSets=True; Trusted_Conection=False",
+    "CompanyName": "My Company",
+    "CompanyPhone": "+7 (777) 777 77 77",
+    "CompanyPhoneShort": "+77777777777",
+    "CompanyEmail":  "andreykindm@gmail.com"
+  }
 }
